--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "dev": "ng serve",
     "build": "ng build",
     "postinstall": "ng build --aot --prod",
     "start:prod": "ng build --prod && lite-server --baseDir dist/adminmovil01",
