--- a/angular.json
+++ b/angular.json
@@ -26,11 +26,14 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootswatch/dist/cyborg/bootstrap.min.css",
+              "node_modules/bootswatch/dist/darkly/bootstrap.min.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
