--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.3",
     "@angular/service-worker": "~9.1.3",
     "bootstrap": "^4.5.2",
+    "bootstrap-icons": "^1.0.0",
     "bootswatch": "^4.5.1",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.19",
