--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "@angular/service-worker": "~9.1.3",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.2",
     "bootstrap-icons": "^1.0.0",
     "bootswatch": "^4.5.1",
@@ -36,6 +37,18 @@
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "crypto": false,
+    "stream": false,
+    "http": false,
+    "tls": false,
+    "zlib": false,
+    "https": false,
+    "net": false
+  },
   "engines": {
     "node": "~13.8.0",
     "npm": "~6.13.6"
@@ -45,6 +58,7 @@
     "@angular/cli": "^9.1.3",
     "@angular/compiler-cli": "~9.1.3",
     "@angular/language-service": "~9.1.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
