--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap-icons": "^1.0.0",
     "bootswatch": "^4.5.1",
     "dotenv": "^8.2.0",
+    "js-base64": "^3.6.0",
     "lodash": "^4.17.19",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.5",
